// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structured Data Table Tests Should render correctly for correct input 1`] = `
<table
  className="ui striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
      <th
        className=""
      >
        Plan
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Structured Data Table Tests Should render correctly for correct input with onSelect handler 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
      <th
        className=""
      >
        Plan
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        some team vs some other team
      </td>
      <td
        className=""
      >
        some comp
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Structured Data Table Tests Should render correctly for correct with no data 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
      <th
        className=""
      >
        Plan
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  />
</table>
`;

exports[`Structured Data Table Tests Should render correctly with selected row 1`] = `
<Table
  as="table"
  selectable={true}
  striped={true}
>
  <TableHeader
    as="thead"
  >
    <TableRow
      as="tr"
      cellAs="td"
    >
      <TableHeaderCell
        as="th"
      >
        Date
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Match
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Competition
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Plan
      </TableHeaderCell>
    </TableRow>
  </TableHeader>
  <TableBody
    as="tbody"
  >
    <StructuredDataRow
      data={
        StructuredData {
          "away": "some other team",
          "competitionID": 1,
          "competitionName": "some comp",
          "data": Object {},
          "date": 1991-04-20T00:00:00.000Z,
          "home": "some team",
          "id": 1,
        }
      }
      isActive={true}
      key="1"
      onSelect={[Function]}
    />
    <StructuredDataRow
      data={
        StructuredData {
          "away": "some other team",
          "competitionID": 1,
          "competitionName": "some comp",
          "data": Object {},
          "date": 1991-04-20T00:00:00.000Z,
          "home": "some team",
          "id": 2,
        }
      }
      isActive={false}
      key="2"
      onSelect={[Function]}
    />
  </TableBody>
</Table>
`;
